oxiplate-derive/tests/broken/for/for-bad-variable.stderr
error[E0609]: no field `numb` on type `&Data`
 --> tests/broken/for/for-bad-variable.rs:5:75
  |
5 |     "{%- for number in numbers -%}{{ number }} + {{ number_to_add }} = {{ numb + number_to_add \
  |                                                                           ^^^^ unknown field
  |
  = note: available fields are: `numbers`, `number_to_add`
